// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot — full bank layouts > IRONMAN_BANK (consolidated tab) 1`] = `
[
  {
    "items": [
      "Coins",
      "Amulet of glory(6)",
      "Ring of dueling(8)",
      "Varrock teleport",
      "Ectophial",
      "Air rune",
      "Blood rune",
      "Fire cape",
      "Abyssal whip",
      "Dragon scimitar",
      "Rune crossbow",
      "Dragon claws",
      "Anglerfish",
      "Saradomin brew(4)",
      "Super restore(4)",
      "Prayer potion(4)",
      "Dragon pickaxe",
      "Coal",
      "Runite ore",
      "Runite bar",
      "Yew logs",
      "Ranarr seed",
      "Pure essence",
      "Reward casket (elite)",
    ],
    "tab": "Bank",
  },
]
`;

exports[`snapshot — full bank layouts > MAX_MAIN_BANK 1`] = `
[
  {
    "items": [
      "Coins",
      "Amulet of glory(6)",
      "Ring of dueling(8)",
      "Games necklace(8)",
      "Skills necklace(6)",
      "Combat bracelet(6)",
      "Burning amulet(5)",
      "Varrock teleport",
      "Ectophial",
      "Chronicle",
      "Royal seed pod",
      "Air rune",
      "Blood rune",
    ],
    "tab": "Teleports",
  },
  {
    "items": [
      "Salve amulet(ei)",
      "Masori mask (f)",
      "Ancestral hat",
      "Infernal cape",
      "Fire cape",
      "Amulet of torture",
      "Necklace of anguish",
      "Occult necklace",
      "Scythe of vitur",
      "Abyssal whip",
      "Dragon scimitar",
      "Twisted bow",
      "Bow of faerdhinen",
      "Rune crossbow",
      "Magic shortbow",
      "Tumeken's shadow",
      "Dragon claws",
      "Voidwaker",
      "Bandos godsword",
      "Avernic defender",
      "Dragon defender",
      "Tome of fire",
      "Bandos chestplate",
      "Masori body (f)",
      "Ancestral robe top",
      "Bandos tassets",
      "Masori chaps (f)",
      "Ancestral robe bottom",
      "Ferocious gloves",
      "Barrows gloves",
      "Primordial boots",
      "Bandos boots",
      "Pegasian boots",
      "Eternal boots",
      "Ultor ring",
      "Berserker ring (i)",
      "Venator ring",
      "Magus ring",
      "Anglerfish",
    ],
    "tab": "PvM Gear",
  },
  {
    "items": [
      "Super combat potion(4)",
      "Ranging potion(4)",
      "Saradomin brew(4)",
      "Super restore(4)",
      "Prayer potion(4)",
      "Stamina potion(4)",
      "Antifire potion(4)",
    ],
    "tab": "Potions",
  },
  {
    "items": [
      "Dragon pickaxe",
      "Adamantite ore",
      "Coal",
      "Runite ore",
      "Steel bar",
      "Runite bar",
      "Magic logs",
      "Yew logs",
      "Snapdragon seed",
      "Magic seed",
      "Ranarr seed",
      "Pure essence",
    ],
    "tab": "Skilling",
  },
  {
    "items": [
      "Reward casket (elite)",
      "Reward casket (hard)",
      "Reward casket (master)",
      "Clue scroll (elite)",
    ],
    "tab": "Clue",
  },
  {
    "items": [
      "Quest point cape",
    ],
    "tab": "Quest",
  },
]
`;

exports[`snapshot — full bank layouts > SKILLER_BANK (consolidated tab) 1`] = `
[
  {
    "items": [
      "Coins",
      "Amulet of glory(6)",
      "Skills necklace(6)",
      "Ectophial",
      "Royal seed pod",
      "Air rune",
      "Blood rune",
      "Dragon pickaxe",
      "Adamantite ore",
      "Coal",
      "Runite ore",
      "Steel bar",
      "Mithril bar",
      "Runite bar",
      "Magic logs",
      "Yew logs",
      "Snapdragon seed",
      "Magic seed",
      "Ranarr seed",
      "Pure essence",
      "Quest point cape",
    ],
    "tab": "Bank",
  },
]
`;

exports[`snapshot — full bank layouts > SMALL_MAIN_BANK (consolidated tab) 1`] = `
[
  {
    "items": [
      "Coins",
      "Amulet of glory(6)",
      "Ring of dueling(8)",
      "Skills necklace(6)",
      "Varrock teleport",
      "Ectophial",
      "Air rune",
      "Blood rune",
      "Fire cape",
      "Abyssal whip",
      "Dragon scimitar",
      "Rune crossbow",
      "Magic shortbow",
      "Dragon claws",
      "Voidwaker",
      "Bandos godsword",
      "Barrows gloves",
      "Bandos boots",
      "Anglerfish",
      "Super combat potion(4)",
      "Saradomin brew(4)",
      "Super restore(4)",
      "Prayer potion(4)",
      "Dragon pickaxe",
      "Coal",
      "Yew logs",
      "Ranarr seed",
      "Reward casket (elite)",
      "Clue scroll (elite)",
      "Quest point cape",
    ],
    "tab": "Bank",
  },
]
`;
